<resources>
  <string name="app_name">Chatty</string>
  <string name="DUMMY_TEXT">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit, sed\ndo eiusmod tempor incididunt </string>
  <string name="item_global_header_button_timeline_title_text">DIARY</string>
  <string name="main_text_Mypartner">My Friend</string>
  <string name="WRITE_SUBMIT">write</string>
  <string name="TEMP">temp</string>
  <string name="text_day">day</string>
  <string name="text_date">date</string>
  <string name="text_dialogs">dialogs</string>
  <string name="text_name">name</string>
  <string name="text_weather">weather</string>
  <string name="item_header_textview_name_text">name</string>
  <string name="item_header_textview_date_text">date</string>
  <string name="item_header_textview_weather_text">weather</string>
  <string name="SETTING_MAIN_ADD_QUESTION">Add Question</string>
  <string name="SETTING_MAIN_COPYRIGHT">© 2018. Chatty.</string>
  <string name="SETTING_MAIN_FRIENDS_SETTING">Friends Setting</string>
  <string name="SETTING_MAIN_LINK_ACCOUNT">Link Account</string>
  <string name="SETTING_MAIN_NOTIFICATION">Notification</string>
  <string name="SETTING_MAIN_SUPPORT">Support</string>
  <string name="SETTING_MAIN_VERSION">Version 0.1</string>
  <string name="SETTING_LIST_FRIEND_NOW">Chatting with</string>
  <string name="SETTING_LIST_FRIENDS">Friends</string>
  <string name="SETTING_PROFILE_ADD_BIO">Bio</string>
  <string name="SETTING_PROFILE_ADD_BUTTON">Done</string>
  <string name="SETTING_PROFILE_ADD_NAME">Name</string>
  <string name="SETTING_PROFILE_MAIN_DIARY">Diaries written together</string>
  <string name="SETTING_PROFILE_MAIN_DURING">Days we have shared</string>
  <string name="SETTING_PROFILE_MAIN_EDIT_BUTTON">Edit Friend</string>
  <string name="SETTING_PROFILE_MAIN_STARTDATE">The first day we met</string>
  <string name="text_emotion_question">How did you feel today?</string>
  <string name="text_emotion_button">OK</string>
  <string name="SPLASH_COPYRIGHT">© 2018. Chatty.\nAll rights reserved.</string>
</resources>
