<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  android:layout_height="wrap_content"
  android:layout_width="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout
    android:gravity="center_vertical"
    android:layout_height="@dimen/SIZE_56"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/item_header_linear_layout_padding_horizontal">
    <ImageView
      android:layout_height="@dimen/SIZE_40"
      android:layout_width="@dimen/SIZE_40"
      android:src="@drawable/sample_profile"/>
    <LinearLayout
      android:id="@+id/linearLayout_bot_prifile_text"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/item_header_linear_layout_bot_prifile_text_layout_margin_start"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:orientation="vertical">
      <TextView
        android:id="@+id/textView_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/item_header_textview_name_text"
        android:textColor="@color/black2"/>
      <TextView
        android:id="@+id/textView_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/item_header_textview_date_text"
        android:textColor="@color/black2"/>
    </LinearLayout>
    <ImageView
      android:id="@+id/imageView_weather_img"
      android:layout_height="@dimen/SIZE_22"
      android:layout_marginHorizontal="@dimen/item_header_imageView_weather_img_layout_margin_horizontal"
      android:layout_width="@dimen/SIZE_22"
      android:src="@color/gray3"/>
    <TextView
      android:id="@+id/textView_weather"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/item_header_textview_weather_text"/>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>