<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/white5"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".view.friendsSetting.FriendsSettingActivity">
  <include
    android:id="@+id/header"
    layout="@layout/item_global_header"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/imageView_profile"/>
  <ImageView
    android:id="@+id/imageView_profile"
    android:scaleType="centerCrop"
    android:src="@mipmap/ic_launcher_round"
    android:layout_width="@dimen/SIZE_80"
    android:layout_height="@dimen/SIZE_80"
    android:foreground="@drawable/layout_circle_profile"
    android:layout_marginTop="@dimen/SIZE_50"
    app:layout_constraintTop_toBottomOf="@id/header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/textView_profile_name"/>
  <TextView
    android:id="@+id/textView_profile_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Conan O'Brien"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_16sp"
    android:layout_marginTop="@dimen/SIZE_16"
    app:layout_constraintTop_toBottomOf="@id/imageView_profile"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/textView_profile_bio"/>
  <TextView
    android:id="@+id/textView_profile_bio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="I'm with COCO"
    android:textColor="@color/gray5"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_8"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
  <TextView
    android:id="@+id/textView_profile_diary_question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/SETTING_PROFILE_MAIN_DIARY"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_60"
    android:layout_marginStart="@dimen/SIZE_20"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_bio"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textView_profile_diary_answer"/>
  <TextView
    android:id="@+id/textView_profile_diary_answer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="10 diaries"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_60"
    android:layout_marginEnd="@dimen/SIZE_20"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_bio"
    app:layout_constraintStart_toEndOf="@id/textView_profile_diary_question"
    app:layout_constraintEnd_toEndOf="parent"/>
  <TextView
    android:id="@+id/textView_profile_during_question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/SETTING_PROFILE_MAIN_DURING"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_30"
    android:layout_marginStart="@dimen/SIZE_20"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_diary_question"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textView_profile_during_answer"/>
  <TextView
    android:id="@+id/textView_profile_during_answer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="29days"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_30"
    android:layout_marginEnd="@dimen/SIZE_20"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_diary_question"
    app:layout_constraintStart_toEndOf="@id/textView_profile_during_question"
    app:layout_constraintEnd_toEndOf="parent"/>
  <TextView
    android:id="@+id/textView_profile_startdate_question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/SETTING_PROFILE_MAIN_STARTDATE"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_30"
    android:layout_marginStart="@dimen/SIZE_20"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_during_question"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textView_profile_startdate_answer"/>
  <TextView
    android:id="@+id/textView_profile_startdate_answer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="2018.06.01"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_30"
    android:layout_marginEnd="@dimen/SIZE_20"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_during_question"
    app:layout_constraintStart_toEndOf="@id/textView_profile_startdate_question"
    app:layout_constraintEnd_toEndOf="parent"/>
  <!--TODO: Add radius option in button-->
  <Button
    android:id="@+id/button_edit_profile"
    android:background="@color/gray1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/SIZE_48"
    android:textSize="@dimen/text_size_14sp"
    android:text="@string/SETTING_PROFILE_MAIN_EDIT_BUTTON"
    android:textAllCaps="false"
    android:textColor="@color/white5"
    android:layout_marginStart="@dimen/SIZE_20"
    android:layout_marginEnd="@dimen/SIZE_20"
    android:layout_marginBottom="@dimen/SIZE_20"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    style="?android:attr/borderlessButtonStyle"/>
</android.support.constraint.ConstraintLayout>