<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/white5"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".view.addFriend.AddFriendActivity">
  <include
    android:id="@+id/header"
    layout="@layout/item_global_header"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/imageView_profile"/>
  <ImageView
    android:id="@+id/imageView_profile"
    android:src="@color/gray1"
    android:layout_width="@dimen/SIZE_96"
    android:layout_height="@dimen/SIZE_96"
    android:foreground="@drawable/layout_circle_profile"
    android:layout_marginTop="@dimen/SIZE_50"
    app:layout_constraintTop_toBottomOf="@id/header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/textView_profile_name"/>
  <ImageView
    android:id="@+id/imageView_addProfile_button"
    android:src="@drawable/icon_edit_profile_image"
    android:layout_width="@dimen/SIZE_30"
    android:layout_height="@dimen/SIZE_30"
    app:layout_constraintBottom_toBottomOf="@+id/imageView_profile"
    app:layout_constraintEnd_toEndOf="@+id/imageView_profile" />
  <TextView
    android:id="@+id/textView_profile_name"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="wrap_content"
    android:text="@string/SETTING_PROFILE_ADD_NAME"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_70"
    android:layout_marginStart="@dimen/SIZE_20"
    app:layout_constraintWidth_default="percent"
    app:layout_constraintWidth_percent="0.2"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/imageView_profile"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/textView_profile_bio"/>
  <EditText
    android:id="@+id/editText_profile_name"
    android:hint="@string/SETTING_PROFILE_ADD_NAME"
    android:maxLines="1"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/SIZE_20"
    android:textSize="@dimen/text_size_14sp"
    app:layout_constraintWidth_default="percent"
    app:layout_constraintWidth_percent="0.7"
    app:layout_constraintTop_toTopOf="@id/textView_profile_name"
    app:layout_constraintBottom_toBottomOf="@id/textView_profile_name"
    app:layout_constraintEnd_toEndOf="parent"/>
  <TextView
    android:id="@+id/textView_profile_bio"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="wrap_content"
    android:text="@string/SETTING_PROFILE_ADD_BIO"
    android:textColor="@color/black0"
    android:textSize="@dimen/text_size_14sp"
    android:layout_marginTop="@dimen/SIZE_30"
    android:layout_marginStart="@dimen/SIZE_20"
    app:layout_constraintWidth_default="percent"
    app:layout_constraintWidth_percent="0.2"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/textView_profile_name"
    app:layout_constraintStart_toStartOf="parent"/>
  <EditText
    android:id="@+id/editText_profile_bio"
    android:hint="@string/SETTING_PROFILE_ADD_BIO"
    android:maxLines="1"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/SIZE_20"
    android:textSize="@dimen/text_size_14sp"
    app:layout_constraintWidth_default="percent"
    app:layout_constraintWidth_percent="0.7"
    app:layout_constraintTop_toTopOf="@id/textView_profile_bio"
    app:layout_constraintBottom_toBottomOf="@id/textView_profile_bio"
    app:layout_constraintEnd_toEndOf="parent"/>
  <!--TODO: Add radius option in button-->
  <Button
    android:id="@+id/button_edit_profile"
    android:background="@color/gray1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/SIZE_48"
    android:textSize="@dimen/text_size_14sp"
    android:text="@string/SETTING_PROFILE_ADD_BUTTON"
    android:textAllCaps="false"
    android:textColor="@color/white5"
    android:layout_marginStart="@dimen/SIZE_20"
    android:layout_marginEnd="@dimen/SIZE_20"
    android:layout_marginBottom="@dimen/SIZE_20"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    style="?android:attr/borderlessButtonStyle"/>
</android.support.constraint.ConstraintLayout>